<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.GoalSettingApp"
    tools:context=".MainActivity"
    android:fitsSystemWindows="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        style="@style/TextAppearance.AppCompat.Headline"
        android:text="@string/current_date" />

    <TextView
        android:id="@+id/current_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        style="@style/TextAppearance.AppCompat.Headline" />

    <TextView
        android:id="@+id/goal_date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/date_text"
        android:layout_alignParentLeft="true"
        style="@style/TextAppearance.AppCompat.Headline"
        android:text="Goal Deadline:" />

    <TextView
        android:id="@+id/goal_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/date_text"
        style="@style/TextAppearance.AppCompat.Headline" />


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/goal_date"
        app:tabMode="fixed">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/Quarter_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quarter_tab_text"
            />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/Year_1_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year_1_tab_text" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/Year_5_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Year_5_tab_txt" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/tab_layout"
        />


</RelativeLayout>